# streamlit-tutorial

./: pyproject.toml
part_five/: app.py
part_five/resources/: __init__.py
part_four/: app.py
part_one/app/: app.py
part_six/.streamlit/: config.toml
part_six/pages/: 1_Titanic_Data_Visualization.py
part_three/: app.py
part_three/resources/: __init__.py
part_two/app/: app.py
